@@ -1,3 +1,7 @@
+2008-06-20  Kouhei Sutou  <kou@cozmixng.org>
+
+	* src/rb_cairo_surface.c: finish all guarded surfaces at end.
+
 2008-06-19  Kouhei Sutou  <kou@cozmixng.org>
 
 	* src/: use #ifdef for CAIRO_HAS_*.
